<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Chooseyourspot">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/threePointSpot"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/rightCornerThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rightCornerThree"
            android:textSize="40sp" />

        <RadioButton
            android:id="@+id/rightWingThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rightWingThree"
            android:textSize="40sp" />

        <RadioButton
            android:id="@+id/topOfKeyThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/topOfKeyThree"
            android:textSize="40sp" />

        <RadioButton
            android:id="@+id/leftWingThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leftWingThree"
            android:textSize="40sp" />

        <RadioButton
            android:id="@+id/leftCornerThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leftCornerThree"
            android:textSize="40sp" />
    </RadioGroup>

    <Button
        android:id="@+id/goToCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:onClick="goToCounter"
        android:text="@string/goToCounter"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>