<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_white"
    tools:context=".Countercounter">

    <Button
        android:id="@+id/madeButton"
        android:layout_width="195dp"
        android:layout_height="80dp"
        android:layout_marginBottom="75dp"
        android:onClick="madeBasket"
        android:text="@string/madeButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/missButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/missButton"
        android:layout_width="200dp"
        android:layout_height="77dp"
        android:layout_marginBottom="76dp"
        android:onClick="missButton"
        android:text="@string/missButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/madeShots"
        android:layout_width="wrap_content"
        android:layout_height="97dp"
        android:layout_marginStart="56dp"
        android:text="@string/zero"
        android:textSize="75sp"
        app:layout_constraintBottom_toTopOf="@+id/madeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <TextView
        android:id="@+id/missShots"
        android:layout_width="wrap_content"
        android:layout_height="97dp"
        android:layout_marginEnd="56dp"
        android:text="@string/zero"
        android:textSize="75sp"
        app:layout_constraintBottom_toTopOf="@+id/madeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:text="Make "
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/madeShots"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:text="Miss "
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/missShots"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/hotZoneChart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="goToHotSpot"
        android:text="hotZoneChart"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="118dp"
        android:layout_marginTop="254dp"
        android:layout_marginBottom="204dp"
        app:layout_constraintBottom_toTopOf="@+id/madeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/b_ball" />

</androidx.constraintlayout.widget.ConstraintLayout>